Update index.html / script.js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -34,7 +34,7 @@
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="Imagem de saídas">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
@@ -42,7 +42,7 @@
                     <span>Total</span>
                     <img src="./assets/total.svg" alt="Imagem de total">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
         </section>
 
@@ -61,7 +61,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!-- <tr>
                         <td class="description">Luz</td>
                         <td class="expense">- R$ 500,00</td>
                         <td class="date">23/01/2021</td>
@@ -78,7 +78,7 @@
                         <td class="expense">- R$ 200,00</td>
                         <td class="date">23/01/2021</td>
                         <td><img src="./assets/minus.svg" alt="Remover transação"></td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </section>
@@ -92,7 +92,7 @@
             <div class="form">
                 <!-- conteúdo -->
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
                         <input type="text" id="description" name="description" placeholder="Descrição">
@@ -120,16 +120,7 @@
 
     <footer><p>dev.finance$</p></footer>
 
-    <script>
-        const Modal = {
-            open() {
-                document.querySelector('.modal-overlay').classList.add('active');
-            },
-            close() {
-                document.querySelector('.modal-overlay').classList.remove('active');
-            }
-        }
-    </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
